# adhoc-ng

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/scripts/: setup-gcc.sh
.github/workflows/: ci.yml
source/: database.cpp  database.hpp  deque.hpp  fwd_mov.hpp  game_server.cpp  game_server.hpp  heterogeneous.hpp  main.cpp  protocol.hpp  registry.cpp  registry.hpp  relay_server.cpp  relay_server.hpp  resource.rc  session.cpp  session.hpp  status_server.cpp  status_server.hpp  string.hpp  utf8.cpp  utf8.hpp
